use ModeNetworkFilter and exactly Link finder